--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  position: relative;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -7,14 +9,29 @@
   pointer-events: none;
 }
 
+.Bg-logo-img {
+  height: 100%;
+  width: 100%;
+}
+
+.bg-logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.1;
+  height: 70vmin;
+  width: 70vmin;
+  z-index: 0;
+}
+
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .bg-logo {
+    animation: bg-logo-spin infinite 60s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +39,19 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: relative; 
+  z-index: 1;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes bg-logo-spin {
   from {
-    transform: rotate(0deg);
+    transform: translate(-50%, -50%) rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: translate(-50%, -50%) rotate(360deg);
   }
 }
